--- a/uikit/css/uikit.css
+++ b/uikit/css/uikit.css
@@ -12426,10 +12426,11 @@ nav {
     color: navy
   }
 }
-
-.social-media-icons {
-  position: absolute;
-  margin: -20% 0 0 600px
+@media only screen and (max-width: 400px) {
+  .social-media-icons {
+    position: absolute;
+    margin: -20% 0 0 500px
+  }
 }
 @media (min-width: 960px) {
   .social-media-icons {
