--- a/uikit/css/uikit.css
+++ b/uikit/css/uikit.css
@@ -12445,6 +12445,10 @@ h2 span a:focus{
     position: absolute;
     margin: -35px 0 0 835px;
   }
+            #container {
+    width: 400px;
+    height: 250px;
+  }
 }
 @media (min-width: 1024px) {
   .social-media-icons {
@@ -12575,6 +12579,11 @@ a:-webkit-any-link{
   transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
 }
 
+.sub-menu > li > a {
+  font-size: 20px;
+  font-weight: bold
+}
+
 .sub-menu-parent:focus .sub-menu,
 .sub-menu-parent:focus-within .sub-menu,
 .sub-menu-parent:hover .sub-menu {
@@ -12600,7 +12609,6 @@ nav a {
   text-decoration: none
 }
 nav a:hover {
-  /* color: rgb(95, 128, 131) rgb(157, 123, 163)*/
   color: rgb(91, 129, 182)
 }
 nav ul,
@@ -12622,7 +12630,7 @@ nav > ul > li:first-child {
 
 
 .category-first {
-  margin: 300px 0 0 200px;
+  margin: 230px 0 0 200px;
   width: 200px;
   font-family: "chinese_title";
   /* font-family: 'Permanent Marker', cursive; */
